--- a/src/styles/SlideoutPanel.scss
+++ b/src/styles/SlideoutPanel.scss
@@ -17,7 +17,8 @@
   }
   .button-close-panel {
     position: absolute;
-    right: 0;
+    right: 16px;
+    top: 8px;
     z-index: 2000;
     background-color: $white;
     svg {
