--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,19 +2,19 @@
 @import url('https://cloud.typography.com/6135894/7078832/css/fonts.css');
 
 @mixin font-knockout-jr-lightweight {
-  font-family: 'Knockout 29 A', 'Knockout 29 B';
+  font-family: 'Knockout 29 A', 'Knockout 29 B', sans-serif;
   font-style: normal;
   font-weight: 400;
 }
 
 @mixin font-knockout-lightweight {
-  font-family: 'Knockout 49 A', 'Knockout 49 B';
+  font-family: 'Knockout 49 A', 'Knockout 49 B', sans-serif;
   font-style: normal;
   font-weight: 400;
 }
 
 @mixin font-gotham-book {
-  font-family: 'Gotham A', 'Gotham B';
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
   font-style: normal;
   font-weight: 400;
 }
