--- a/src/styles/InteractiveScale.scss
+++ b/src/styles/InteractiveScale.scss
@@ -1,12 +1,12 @@
 .interactive-scale {
   width: 100%;
-  height: 44px;
+  height: 24px;
   cursor: pointer;
   display: flex;
   opacity: 0.2;
   // padding: 1rem;
   // border: 2px solid transparent;
-  margin: 1.6rem 0 2.4rem;
+  margin: 1.6rem 0 0 0;
   &.active {
     opacity: 1;
     // background-color: #ccc;
@@ -15,7 +15,20 @@
   .quintile-button {
     height: 100%;
     width: 16.67%; // 20%;
-    cursor: pointer;
+    border: none;
+    &:first-child {
+      position: relative;
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: -8px;
+        width: 1px;
+        height: calc(100% + 8px);
+        border-right: 1px solid #2b2b2b6b;
+        left: 0;
+      }
+    }
     &.quintile-2 {
       width: 33.33%;
       position: relative;
@@ -23,10 +36,24 @@
         content: '';
         display: block;
         position: absolute;
+        top: -8px;
         width: 1px;
-        height: 100%;
+        height: calc(100% + 8px);
         border-right: 1px solid #2b2b2b6b;
         left: 50%;
+      }
+    }
+    &:last-child {
+      position: relative;
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: -8px;
+        width: 1px;
+        height: calc(100% + 8px);
+        border-right: 1px solid #2b2b2b6b;
+        right: 0px;
       }
     }
   }
