--- a/src/styles/MapLegend.scss
+++ b/src/styles/MapLegend.scss
@@ -3,6 +3,7 @@
   top: $navbar-height; // calc(16px + 64px); // Changes on smallest device.
   width: 100%;
   cursor: default;
+  pointer-events: all;
   &.hide-mobile {
     display: none;
   }
@@ -20,14 +21,17 @@
   background: #fff;
   padding: 16px;
   @include media-breakpoint-up(md) {
-    padding: 24px;
+    padding: 16px 16px 8px;
   }
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   .map-legend-open-filter-panel {
+    color: $color-untd-blue;
     text-decoration: underline;
     cursor: pointer;
-    margin-left: 0.5rem;
+    font-size: 1.2rem;
+    padding: 0.2rem;
+
     &.disabled {
       color: lighten($turtle-green, 15%);
     }
@@ -70,16 +74,25 @@
     }
   }
   .map-legend-metric-title {
+    display: inline-flex;
+    align-items: flex-start;
+    margin: 0 0 0.8rem 0;
+    & > * + * {
+      margin-left: 0.8rem;
+    }
+  }
+  .map-legend-metric-title h3 {
+    margin: 0.2rem 0 0 0;
+    display: inline-flex;
     @include font-gotham-book;
     color: $color-untd-darkgray;
     font-size: 1.4rem;
     line-height: 2rem;
-    margin: 0.5rem 0;
+
     font-weight: 600;
     @include media-breakpoint-up(md) {
       font-size: 1.6rem;
       line-height: 1.8rem;
-      margin: 1rem 0;
     }
   }
   .n-i-scale {
