--- a/src/styles/NonInteractiveScale.scss
+++ b/src/styles/NonInteractiveScale.scss
@@ -1,6 +1,11 @@
 .n-i-scale {
   width: 100%;
-
+  padding-right: 1px;
+  padding-left: 1px;
+  &:after,
+  &:before {
+    display: none;
+  }
   .n-i-scale-value {
     width: 100%;
   }
@@ -21,56 +26,30 @@
     // Quintiles container.
     .n-i-scale-quintiles {
       width: 100%;
-      top: -1px;
+      top: -5px;
+      border: 1px solid #ccc;
+      height: 16px;
+      box-sizing: content-box;
+      margin-top: 0.6rem;
       // The horizontal line through the quintiles.
-      &:before {
-        width: 100%;
-        height: 0.5px;
-        background-color: $turtle-green;
-        display: block;
-        content: '';
-        position: absolute;
-        top: 5.25px;
-        left: 0;
+      &:before,
+      &:after {
+        display: none;
       }
       // Quintiles.
       .n-i-scale-quintile {
-        height: 10px;
-        width: 16.66%; // 20%;
         display: inline-block;
         position: relative;
+        height: 100%;
+        border-right: 1px solid #ccc;
+        top: 0;
+        width: 16.665%;
+        &.quintile-4 {
+          border-right: 0;
+        }
         // opacity: 0.4;
         &.quintile-2 {
           width: 33.33%;
-          &:before {
-            content: '';
-            display: block;
-            width: 0.5px;
-            height: 14px;
-            position: absolute;
-            top: -4px;
-            left: 50%;
-            background-color: $turtle-green;
-          }
-        }
-        &.quintile-0:before,
-        &.quintile-4:after {
-          // border-right: 1px solid black;
-          content: '';
-          display: block;
-          width: 1px;
-          height: 14px;
-          position: absolute;
-          top: -4px;
-          background-color: $turtle-green;
-        }
-        &.quintile-0:before {
-          // border-left: 1px solid black;
-          left: 0;
-        }
-        &.quintile-4:after {
-          // border-right: 1px solid black;
-          right: 0;
         }
       }
     }
