--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,22 +13,31 @@ p {
 [class*='gotham'] {
   @include font-gotham-book;
   margin: 0;
+  // only 400 / 500 available for gotham
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 500;
+  }
 }
 .gotham18 {
   font-size: 1.8rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.285714285714286;
   letter-spacing: 0.01em; // 1%
 }
 .gotham16 {
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.285714285714286;
   letter-spacing: 0.01em; // 1%
 }
 .gotham15 {
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.285714285714286;
   letter-spacing: 0.01em; // 1%
 }
@@ -43,6 +52,9 @@ p {
 .gotham12 {
   font-size: 1.2rem;
   font-weight: normal;
+  strong {
+    font-weight: 500;
+  }
 }
 
 // knockout typeface helpers
@@ -101,23 +113,6 @@ p {
 }
 .w900 {
   font-weight: 900;
-}
-
-// spacing utilities
-.p-2 {
-  padding: 1rem !important;
-}
-.p-3 {
-  padding: 1.5rem !important;
-}
-.p-4 {
-  padding: 2rem !important;
-}
-.p-5 {
-  padding: 2.5rem !important;
-}
-.p-6 {
-  padding: 3rem !important;
 }
 
 // provide a basic primary button
