--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -61,6 +61,7 @@ p {
 [class*='knockout'] {
   @include font-knockout-jr-lightweight;
   text-transform: uppercase;
+  letter-spacing: 0.05em;
 }
 .knockout14 {
   font-size: 1.4rem;
@@ -126,11 +127,11 @@ p {
   color: $color-primary;
   border-color: #ccc;
   &:not(:disabled):not(.disabled).active {
-    background-color: $color-untd-lemon;
+    background-color: $color-active-light;
     color: $color-primary;
     &:focus,
     &:hover {
-      background-color: darken($color-untd-lemon, 15%);
+      background-color: $color-active-hover;
     }
   }
   &:not(:disabled):not(.disabled):hover,
@@ -153,15 +154,15 @@ p {
   color: $color-primary;
   border: none;
   &:not(:disabled):not(.disabled).active {
-    background-color: $color-untd-lemon;
+    background-color: $color-active-light;
     color: $color-primary;
     &:focus {
-      background-color: darken($color-untd-lemon, 15%);
+      background-color: $color-active-hover;
     }
   }
   &:not(:disabled):not(.disabled):hover,
   &:not(:disabled):not(.disabled):focus {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: $color-hover;
     outline: none;
     box-shadow: none;
     border: none;
@@ -173,7 +174,7 @@ p {
     border: none;
   }
   &:not(:disabled):not(.disabled):active {
-    background-color: rgba(0, 0, 0, 0.07);
+    background-color: $color-hover-active;
     color: $color-primary;
     outline: none;
     box-shadow: none;
