adjust mobile to use side panel

--- a/src/styles/SlideoutPanel.scss
+++ b/src/styles/SlideoutPanel.scss
@@ -1,27 +1,15 @@
 .map-panel-slideout {
-  // These change based on device width.
-  height: calc(100vh - 64px - 64px - 16px - 16px);
-  // max-height: 480px;
-  top: calc(64px + 16px);
-  left: 70px;
-  // Do not change based on device width.
   position: absolute;
-  z-index: 400; // 1999;
+  z-index: 402; // above control panel
+  top: 0;
+  left: 0;
+  height: 100%;
 }
 
-@media only screen and (min-width: 768px) {
+@include media-breakpoint-up(md) {
   .map-panel-slideout {
-    // These change based on device width.
-    height: calc(100vh - 64px - 64px - 16px - 16px);
-    // max-height: 480px;
-    top: calc(64px + 16px + 16px);
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  .map-panel-slideout {
-    top: 0;
-    height: 100%;
+    left: 70px;
+    z-index: 400; // behind control panel
   }
 }
 
