--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -129,7 +129,7 @@
     }
   }
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     width: $control-panel-width;
     &.display-feeder {
       width: $control-panel-width;
