--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -13,7 +13,7 @@
   height: 64px;
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-around;
   position: absolute;
   width: 100%;
   background: #fff;
