--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -37,6 +37,8 @@
         background-color: #fff;
         .item {
           button {
+            width: 100%;
+            text-align: left;
             svg {
               width: 16px;
               height: 16px;
