--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -87,11 +87,11 @@
     // margin-right: 1rem;
     flex: 0 0 40px;
     align-self: center;
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: $color-hover;
     }
-    &.active,
-    &:focus {
+    &.active {
       background-color: $color-active-light;
       color: $color-active-dark;
     }
@@ -205,10 +205,11 @@
       text-align: center;
       display: block;
       @include font-knockout-jr-lightweight;
-      color: $untd-font-gray;
+      color: $color-untd-gray;
       font-weight: 300;
       font-size: 1.3rem;
       line-height: 1.2rem;
+      letter-spacing: 0.05em;
       // margin-bottom: 16px;
       // &:nth-of-type(3),
       // &:nth-of-type(4),
@@ -256,20 +257,7 @@
     .button-panel-location,
     .button-panel-filters,
     .button-panel-layers {
-      &.active,
-      &:focus {
-        // background-color: transparent !important; // $color-untd-lemon; // #ffeee5;
-        &:before {
-          position: absolute;
-          width: 30px;
-          height: 30px;
-          content: '';
-          display: block;
-          margin: auto;
-          border-radius: 50%;
-          background-color: $color-active-light;
-          z-index: 10;
-        }
+      &.active {
         svg {
           z-index: 12;
           path,
